fix: centered photo on mobile.

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -22,6 +22,7 @@
     @media (max-width: 768px) {
       flex-direction: column;
       text-align: center;
+      justify-content: center;
     }
 
     .about-text {
@@ -64,20 +65,23 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-
+    
       img {
         width: 100%;
         height: auto;
         border: 3px solid #8a2be2;
         border-radius: 10px;
       }
-
+    
       @media (max-width: 768px) {
-        width: 70%;
-        padding-left: 0;
-        margin-top: 20px;
+        width: 100%;               /* Full width on mobile */
+        padding-left: 0;           /* Remove any left padding */
+        margin: 20px auto 0;       /* Add margin for spacing and center horizontally */
+        justify-content: center;   /* Center the image horizontally */
       }
     }
+    
+    
   }
 
   .about-technologies,
